--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     <body>
        <div class="navbar">
             <div class="navbar-inner">
-                  <a href="/app/index.html#/main" class="logo">
-                      <img src="/app/img/signature.png" class="signature retina">
+                  <a href="/public/index.html#/main" class="logo">
+                      <img src="/public/img/signature.png" class="signature retina">
                   </a>     
             </div>
         </div>
@@ -36,17 +36,17 @@
                 <li ng-class="{active: routeIs('/first_project')}"
                     class="first-project"
                     ng-click="$location.path('/first_project')">
-                    <img src="/app/img/main/calendar.jpg" class="menu-img">
+                    <img src="/public/img/main/calendar.jpg" class="menu-img">
                     <span>First Project</span></li>
                 </li>
                 <li ng-class="{active: routeIs('/android_apps')}"
                     ng-click="$location.path('/android_apps')">
-                     <img src="/app/img/main/s3.jpg" class="menu-img">
+                     <img src="/public/img/main/s3.jpg" class="menu-img">
                     <span>Android Apps</span>
                 </li>
                 <li ng-class="{active: routeIs('/internship')}"
                     ng-click="$location.path('/internship')">
-                     <img src="/app/img/main/paper.gif" class="menu-img">
+                     <img src="/public/img/main/paper.gif" class="menu-img">
                     <span>Internship</span>
                 </li>
             </ul>
@@ -64,6 +64,5 @@
              If you have any comments or concerns, contact <a href="mailto:samhykim@gmail.com">samhykim@gmail.com</a> - Thanks!
           </div>            
         </footer>
-        <ze-walkthrough id="walkthrough"><ze-walkthrough>
     </body>
 </html>
