fix broken paths

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <body>
        <div class="navbar">
             <div class="navbar-inner">
-                  <a href="/public/index.html#/main" class="logo">
-                      <img src="/public/img/signature.png" class="signature retina">
+                  <a href="/index.html/main" class="logo">
+                      <img src="/img/signature.png" class="signature retina">
                   </a>     
             </div>
         </div>
@@ -36,17 +36,17 @@
                 <li ng-class="{active: routeIs('/first_project')}"
                     class="first-project"
                     ng-click="$location.path('/first_project')">
-                    <img src="/public/img/main/calendar.jpg" class="menu-img">
+                    <img src="/img/main/calendar.jpg" class="menu-img">
                     <span>First Project</span></li>
                 </li>
                 <li ng-class="{active: routeIs('/android_apps')}"
                     ng-click="$location.path('/android_apps')">
-                     <img src="/public/img/main/s3.jpg" class="menu-img">
+                     <img src="/img/main/s3.jpg" class="menu-img">
                     <span>Android Apps</span>
                 </li>
                 <li ng-class="{active: routeIs('/internship')}"
                     ng-click="$location.path('/internship')">
-                     <img src="/public/img/main/paper.gif" class="menu-img">
+                     <img src="/img/main/paper.gif" class="menu-img">
                     <span>Internship</span>
                 </li>
             </ul>
