--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en" ng-app="samspage">
     <head>
        <meta charset="utf-8">
-       <title>Angular Project</title>
+       <title>Sam Kim</title>
        <link rel="stylesheet" href="css/app.css">
        <link rel="stylesheet" href="css/bootstrap.css">
 
        <!-- Tutorial -->
        <link rel="stylesheet" href="tutorial/plugins/css/jquery.walkthrough.css">
 
-       <script src="lib/cdn/jquery-2.0.3.js"></script>
-       <script src="lib/cdn/bootstrap-2.3.2.js"></script>
-       <script src="lib/cdn/angular-1.0.7.js"></script>
-       <script src="lib/cdn/angular-strap.js"></script>
-       <script src="lib/angular/angular-resource.js"></script>
-       <script src="js/app.js"></script>
-       <script src="js/controllers.js"></script>
-       <script src="js/filters.js"></script>
-       <script src="js/services.js"></script>
-       <script src="js/directives.js"></script>
+       <script src="/assets/lib/cdn/jquery-2.0.3.js"></script>
+       <script src="/assets/lib/cdn/bootstrap-2.3.2.js"></script>
+       <script src="/assets/lib/cdn/angular-1.0.7.js"></script>
+       <script src="/assets/lib/cdn/angular-strap.js"></script>
+       <script src="/assets/lib/angular/angular-resource.js"></script>
+       <script src="/assets/js/app.js"></script>
+       <script src="/assets/js/controllers.js"></script>
+       <script src="/assets/js/filters.js"></script>
+       <script src="/assets/js/services.js"></script>
+       <script src="/assets/js/directives.js"></script>
 
        <script type="text/javascript" src="tutorial/plugins/jquery.pagewalkthrough-1.1.0.js"></script>
        <script type="text/javascript" src="tutorial/example/page.js"></script>
