attempt to fix site3

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
        <meta charset="utf-8">
        <title>Sam Kim</title>
-       <link rel="stylesheet" href="css/app.css">
-       <link rel="stylesheet" href="css/bootstrap.css">
+       <link rel="stylesheet" href="/assets/css/app.css">
+       <link rel="stylesheet" href="/assets/css/bootstrap.css">
 
        <!-- Tutorial -->
        <link rel="stylesheet" href="tutorial/plugins/css/jquery.walkthrough.css">
@@ -20,8 +20,6 @@
        <script src="/assets/js/services.js"></script>
        <script src="/assets/js/directives.js"></script>
 
-       <script type="text/javascript" src="tutorial/plugins/jquery.pagewalkthrough-1.1.0.js"></script>
-       <script type="text/javascript" src="tutorial/example/page.js"></script>
     </head>
     <body>
        <div class="navbar">
