--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
        <script src="/assets/lib/cdn/jquery-2.0.3.js"></script>
        <script src="/assets/lib/cdn/bootstrap-2.3.2.js"></script>
-       <script src="/assets/lib/cdn/angular-1.0.7.js"></script>
+       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
        <script src="/assets/lib/cdn/angular-strap.js"></script>
        <script src="/assets/lib/angular/angular-resource.js"></script>
        <script src="/assets/js/app.js"></script>
