update google cdn

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
        <!-- Tutorial -->
        <link rel="stylesheet" href="tutorial/plugins/css/jquery.walkthrough.css">
-
+       <!-- Angular Google CDN -->
+       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
+       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.js"></script>
        <script src="/assets/lib/cdn/jquery-2.0.3.js"></script>
        <script src="/assets/lib/cdn/bootstrap-2.3.2.js"></script>
-       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
+       
+
        <script src="/assets/lib/cdn/angular-strap.js"></script>
        <script src="/assets/lib/angular/angular-resource.js"></script>
        <script src="/assets/js/app.js"></script>
