add content to top menu links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="navbar-inner">  
               <ul class="navigation">
                 <li ng-repeat="tab in tabs" >
-                    <a href='/{{tab | lowercase}}' class="menu">{{tab}}</a>
+                    <a href='/{{tab | menuUrl}}' class="menu">{{tab}}</a>
                 </li>
             </u1>
             </div>
