--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         </div>
         <div class="left-menu" ng-controller="MainController">
             <ul class="nav">
-                <li ng-class="{active: routeIs('/first_project')}"
+                <li ng-class="{active: routeIs('/calendar')}"
                     class="first-project"
-                    ng-click="$location.path('/first_project')">
+                    ng-click="$location.path('/calendar')">
                     <img src="/assets/img/main/calendar.jpg" class="menu-img">
-                    <span>First Project</span></li>
+                    <span>Calendar</span></li>
                 </li>
                 <li ng-class="{active: routeIs('/android_apps')}"
                     ng-click="$location.path('/android_apps')">
