--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
        <title>Sam Kim</title>
 
        <link rel="stylesheet" href="/assets/css/app.css">
+       <link rel="stylesheet" href="/assets/css/animate.css">
        <link rel="stylesheet" href="/assets/css/bootstrap.css">
 
        <!-- Tutorial -->
-       <link rel="stylesheet" href="tutorial/plugins/css/jquery.walkthrough.css">
+       <!-- <link rel="stylesheet" href="tutorial/plugins/css/jquery.walkthrough.css"> -->
        <!-- Angular Google CDN -->
        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.js"></script>
