add social media to contacts

--- a/404.html
+++ b/404.html
@@ -86,8 +86,8 @@
         <div class="content-right" ng-view></div>
         <br>
         <br>
-        <footer>
-          <div class="content-center">
+        <footer class="content-center">
+          <div>
              If you have any comments or concerns, contact <a href="mailto:samhykim@gmail.com">samhykim@gmail.com</a> - Thanks!
           </div>            
         </footer>
