--- a/404.html
+++ b/404.html
@@ -1,95 +1,157 @@
-<!doctype html>
-<html lang="en" ng-app="samhykim">
+<!DOCTYPE html>
+<html lang="en">
     <head>
-       <meta charset="utf-8">
-       <title>Sam Kim</title>
+        <meta charset="utf-8">
+        <title>Page Not Found :(</title>
+        <style>
+            ::-moz-selection {
+                background: #b3d4fc;
+                text-shadow: none;
+            }
 
-       <link rel="stylesheet" href="/assets/css/bootstrap.css">
-       <link rel="stylesheet" href="/assets/css/app.css">
-       <link rel="stylesheet" href="/assets/css/animate.css">
+            ::selection {
+                background: #b3d4fc;
+                text-shadow: none;
+            }
 
-       <!-- Tutorial -->
-       <!-- <link rel="stylesheet" href="tutorial/plugins/css/jquery.walkthrough.css"> -->
-       <!-- Angular Google CDN -->
-       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
-       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.js"></script>
-       <!-- AngularFire and Firebase CDN -->
-       <script src="//cdn.firebase.com/v0/firebase.js"></script>
-       <script src="//cdn.firebase.com/libs/angularfire/0.5.0/angularfire.min.js"></script>
+            html {
+                padding: 30px 10px;
+                font-size: 20px;
+                line-height: 1.4;
+                color: #737373;
+                background: #f0f0f0;
+                -webkit-text-size-adjust: 100%;
+                -ms-text-size-adjust: 100%;
+            }
 
-       <script src="/assets/lib/cdn/jquery-2.0.3.js"></script>
-       <script src="/assets/lib/cdn/bootstrap-2.3.2.js"></script>
+            html,
+            input {
+                font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            }
 
-       <script src="/assets/lib/cdn/ui-bootstrap-tpls-0.11.0.min.js"></script>
-       
+            body {
+                max-width: 500px;
+                _width: 500px;
+                padding: 30px 20px 50px;
+                border: 1px solid #b3b3b3;
+                border-radius: 4px;
+                margin: 0 auto;
+                box-shadow: 0 1px 10px #a7a7a7, inset 0 1px 0 #fff;
+                background: #fcfcfc;
+            }
 
-       <script src="/assets/lib/cdn/angular-strap.js"></script>
-       <script src="/assets/lib/angular/angular-resource.js"></script>
-       <script src="/assets/js/app.js"></script>
-       <script src="/assets/js/controllers.js"></script>
-       <script src="/assets/js/filters.js"></script>
-       <script src="/assets/js/services.js"></script>
-       <script src="/assets/js/directives.js"></script>
-       <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            h1 {
+                margin: 0 10px;
+                font-size: 50px;
+                text-align: center;
+            }
 
-          ga('create', 'UA-49373704-1', 'samhykim.com');
-          ga('send', 'pageview');
-       </script>
-       <base href="/"></base>
+            h1 span {
+                color: #bbb;
+            }
+
+            h3 {
+                margin: 1.5em 0 0.5em;
+            }
+
+            p {
+                margin: 1em 0;
+            }
+
+            ul {
+                padding: 0 0 0 40px;
+                margin: 1em 0;
+            }
+
+            .container {
+                max-width: 380px;
+                _width: 380px;
+                margin: 0 auto;
+            }
+
+            /* google search */
+
+            #goog-fixurl ul {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+            }
+
+            #goog-fixurl form {
+                margin: 0;
+            }
+
+            #goog-wm-qt,
+            #goog-wm-sb {
+                border: 1px solid #bbb;
+                font-size: 16px;
+                line-height: normal;
+                vertical-align: top;
+                color: #444;
+                border-radius: 2px;
+            }
+
+            #goog-wm-qt {
+                width: 220px;
+                height: 20px;
+                padding: 5px;
+                margin: 5px 10px 0 0;
+                box-shadow: inset 0 1px 1px #ccc;
+            }
+
+            #goog-wm-sb {
+                display: inline-block;
+                height: 32px;
+                padding: 0 10px;
+                margin: 5px 0 0;
+                white-space: nowrap;
+                cursor: pointer;
+                background-color: #f5f5f5;
+                background-image: -webkit-linear-gradient(rgba(255,255,255,0), #f1f1f1);
+                background-image: -moz-linear-gradient(rgba(255,255,255,0), #f1f1f1);
+                background-image: -ms-linear-gradient(rgba(255,255,255,0), #f1f1f1);
+                background-image: -o-linear-gradient(rgba(255,255,255,0), #f1f1f1);
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
+                *overflow: visible;
+                *display: inline;
+                *zoom: 1;
+            }
+
+            #goog-wm-sb:hover,
+            #goog-wm-sb:focus {
+                border-color: #aaa;
+                box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+                background-color: #f8f8f8;
+            }
+
+            #goog-wm-qt:hover,
+            #goog-wm-qt:focus {
+                border-color: #105cb6;
+                outline: 0;
+                color: #222;
+            }
+
+            input::-moz-focus-inner {
+                padding: 0;
+                border: 0;
+            }
+        </style>
     </head>
-    <body ng-controller="BodyController" ng-class="{main: routeIs('/')}" >
-       <div class="navbar" ng-controller="MenuController">
-            <div class="navbar-inner">  
-                <ul class="navigation">
-                    <li ng-repeat="tab in tabs" >
-                        <span ng-switch="tab">
-                            <span ng-switch-when="2048">
-                                <a href="/2048/index.html" class="menu" target="_self">2048</a>
-                            </span>
-                            <span ng-switch-default>
-                                <a href='/{{tab | menuUrl}}' class="menu">{{tab}}</a>
-                            </span>
-                        </span>
-                    </li>
-                </u1>
-            </div>
-        </div>
-        <div class="left-menu" ng-controller="MainController">
-            <ul class="nav">
-                <li ng-class="{active: routeIs('/calendar')}"
-                    class="first-project"
-                    ng-click="$location.path('/calendar')">
-                    <img src="/assets/img/main/calendar.jpg" class="menu-img">
-                    <span style="font-size:14px">Calendar</span>
-                </li>
-                <li ng-class="{active: routeIs('/android_apps')}"
-                    ng-click="$location.path('/android_apps')">
-                     <img src="/assets/img/main/s3.jpg" class="menu-img">
-                    <span style="font-size:14px">Android Apps</span>
-                </li>
-                <li ng-class="{active: routeIs('/internship')}"
-                    ng-click="$location.path('/internship')">
-                     <img src="/assets/img/main/paper.gif" class="menu-img">
-                    <span style="font-size:14px">Internship</span>
-                </li>
+    <body>
+        <div class="container">
+            <h1>Not found <span>:(</span></h1>
+            <p>Sorry, but the page you were trying to view does not exist.</p>
+            <p>It looks like this was the result of either:</p>
+            <ul>
+                <li>a mistyped address</li>
+                <li>an out-of-date link</li>
             </ul>
+            <script>
+                var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
+            </script>
+            <script src="//linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
         </div>
-        <div id="tour2" class="left-menu-invisible"></div>        
-        <br>
-        <ze-status class="general-alert"></ze-status>
-        <br>
-        <br>
-        <div class="content-right" ng-view></div>
-        <br>
-        <br>
-        <footer class="content-center">
-          <div>
-             If you have any comments or concerns, contact <a href="mailto:samhykim@gmail.com">samhykim@gmail.com</a> - Thanks!
-          </div>            
-        </footer>
     </body>
 </html>
