--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <script>window.jQuery || document.write('<script src="parallax/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         <script src="parallax/js/imagesloaded.js"></script>
         <script src="parallax/js/skrollr.js"></script>
-        <script src="parallax/js/_main.js"></script>
+        <script src="parallax/js/vendor/_main.js"></script>
 
     </body>
 </html>
