--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								data--200-bottom="opacity: 1;" 
 								data-center="opacity: 1" 
 								data-200-top="opacity: 0" 
-								data-anchor-target="#slide-3">
+								data-anchor-target="#slide-3 h2">
 					    		<h2 style="font-size:24px">This page uses the skrollr.js plugin to implement a 
 					    		    simple parallax scrolling website. Credits to @iHateTomatoe for
 					    		    the simple tutorial which can be found 
@@ -140,7 +140,7 @@
         <script>window.jQuery || document.write('<script src="parallax/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         <script src="parallax/js/imagesloaded.js"></script>
         <script src="parallax/js/skrollr.js"></script>
-        <script src="parallax/js/vendor/_main.js"></script>
+        <script src="parallax/js/main.js"></script>
 
     </body>
 </html>
