add research poster

--- a/main/404.html
+++ b/main/404.html
@@ -56,10 +56,10 @@
                                 <a href="/2048/index.html" class="menu" target="_self">2048</a>
                             </span>
                             <span ng-switch-when="Resume">
-                              <a href="/downloads/resumefall2015r.pdf" class="menu" target="_self">Resume</a>
+                              <a href="/downloads/resumefall2015.pdf" class="menu" target="_self">Resume</a>
                             </span>
                             <span ng-switch-when="Research">
-                              <a href="/downloads/nsg_poster3.pdf" class="menu" target="_self">Research</a>
+                              <a href="/downloads/research_poster.pdf" class="menu" target="_self">Research</a>
                             </span>
                             <span ng-switch-default>
                                 <a href='/{{tab | menuUrl}}' class="menu">{{tab}}</a>
